Update Restauran ConfirmedWas created

--- a/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/RestaurantAdmin/CreateYourRestaurant.cshtml
+++ b/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/RestaurantAdmin/CreateYourRestaurant.cshtml
@@ -1,5 +1,4 @@
-﻿@using QuickFoodDelivery.Domain.Entities;
-@model RestaurantCreateVm
+﻿@model RestaurantCreateVm
 <header>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.10.0/jquery.timepicker.min.js"></script>
@@ -144,6 +143,9 @@
         <p>
             Cum doctus civibus efficiantur in imperdiet deterruisset.
         </p>
+    </div>
+    <div class="prism-toggle">
+        <a asp-action="Index" asp-controller="Restaurant" class="btn btn-sm btn-danger">Cancel</a>
     </div>
     <div class="row justify-content-center">
         <div class="col-md-8">
