--- a/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/RestaurantAdmin/Index.cshtml
+++ b/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/RestaurantAdmin/Index.cshtml
@@ -50,136 +50,12 @@
                     <a asp-action="CreateMeal" asp-controller="restaurantAdmin" class="icon-menut-items">Menu</a>
                 </li>
                 <li>
+                    <a asp-action="UpdateYourRestaurant" asp-controller="restaurantAdmin" asp-route-id="@Model.RestaurantItem.Id" class="icon-menut-items">Menu</a>
+                </li>
+                <li>
                     <a href="#section-3" class="icon-settings"><span>Settings</span></a>
                 </li>
             </ul>
         </nav>
-        <div class="content">
-                <section id="section-2">
-                <form asp-area="manage">
-
-                    <div class="indent_title_in">
-                        <i class="icon_document_alt"></i>
-                        <h3>Edit menu list</h3>
-                        <p>Partem diceret praesent mel et, vis facilis alienum antiopam ea, vim in sumo diam sonet. Illud ignota cum te, decore elaboraret nec ea. Quo ei graeci repudiare definitionem. Vim et malorum ornatus assentior, exerci elaboraret eum ut, diam meliore no mel.</p>
-                    </div>
-
-                    <div class="wrapper_indent">
-
-                        <div class="form-group">
-                            <label>Menu Category</label>
-                            <input type="text" name="menu_category" class="form-control" placeholder="EX. Starters">
-                        </div>
-
-                        <div class="menu-item-section clearfix">
-                            <h4>Menu item #1</h4>
-                            <div>
-                                <a href="#0"><i class="icon_plus_alt"></i></a><a href="#0"><i class="icon_minus_alt"></i></a>
-                            </div>
-                        </div>
-
-                        <div class="strip_menu_items">
-                            <div class="row">
-                                <div class="col-md-3">
-                                    <div class="menu-item-pic dropzone">
-                                        <input asp-for="CreateMealVm.Photo" name="file" type="file">
-                                        <label asp-for="CreateMealVm.Photo"></label>
-                                        <span asp-validation-for="CreateMealVm.Photo"></span>
-                                        <div class="dz-default dz-message">
-                                            <span>Click or Drop<br>Images Here</span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-9">
-                                    <div class="row">
-                                        <div class="col-md-8">
-                                            <div class="form-group">
-                                                <label asp-for="CreateMealVm.Name">Title</label>
-                                                <input asp-for="CreateMealVm.Name" type="text" class="form-control">
-                                                <span asp-validation-for="CreateMealVm.Name"></span>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                <label asp-for="CreateMealVm.Price">Price</label>
-                                                <input asp-for="CreateMealVm.Price" class="form-control">
-                                                <span asp-validation-for="CreateMealVm.Price"></span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label asp-for="CreateMealVm.Description">Price</label>
-                                        <input asp-for="CreateMealVm.Description" class="form-control">
-                                        <span asp-validation-for="CreateMealVm.Description"></span>
-                                    </div>
-
-                                    <div class="col-xl-12">
-                                        <label asp-for="CreateMealVm.FoodCategoryId">FoodCategoryId</label>
-                                        <select asp-for="CreateMealVm.FoodCategoryId" class="form-control" placeholder="FoodCategoryId" asp-items="new SelectList(Model.CreateMealVm.FoodCategories, nameof(FoodCategory.Id), nameof(FoodCategory.Name))">
-                                            <option selected disabled>Chosee Food Category</option>
-                                        </select>
-                                        <span asp-validation-for="CreateMealVm.FoodCategoryId" class="text-danger"></span>
-                                    </div>
-                                </div>
-                            </div><!-- End row -->
-                        </div><!-- End strip_menu_items -->
-                        <button type="submit"> Submit</button>
-
-
-                    </div><!-- End wrapper_indent -->
-
-                    <hr class="styled_2">
-
-                    ><!-- End wrapper_indent -->
-
-            </form>
-                </section><!-- End section 2 -->
-
-
-
-        </div><!-- End content -->
     </div>
 </div><!-- End container  -->
-<script src="~/assets/js/tabs.js"></script>
-<script>
-    new CBPFWTabs(document.getElementById('tabs'));
-</script>
-<!-- WYSIWYG Editor -->
-<script src="~/assets/js/editor/summernote-bs4.min.js"></script>
-<script>
-    $('.wysihtml5').summernote({
-        fontSizes: ['10', '14'],
-        toolbar: [
-            // [groupName, [list of button]]
-            ['style', ['bold', 'italic', 'underline', 'clear']],
-            ['font', ['strikethrough']],
-            ['fontsize', ['fontsize']],
-            ['para', ['ul', 'ol', 'paragraph']]
-        ],
-        placeholder: 'Write here your description....',
-        tabsize: 2,
-        height: 200
-    });
-</script>
-<script src="~/assets/js/dropzone.min.js"></script>
-<script>
-    if ($('.dropzone').length > 0) {
-        Dropzone.autoDiscover = false;
-        $("#photos").dropzone({
-            url: "upload",
-            addRemoveLinks: true
-        });
-
-        $("#logo_picture").dropzone({
-            url: "upload",
-            maxFiles: 1,
-            addRemoveLinks: true
-        });
-
-        $(".menu-item-pic").dropzone({
-            url: "upload",
-            maxFiles: 1,
-            addRemoveLinks: true
-        });
-    }
-</script>
