--- a/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Areas/Manage/Views/Meal/Index.cshtml
+++ b/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Areas/Manage/Views/Meal/Index.cshtml
@@ -26,6 +26,7 @@
                             <th scope="col">Update</th>
                             <th scope="col">Soft Delete</th>
                             <th><a asp-action="Arxiv" asp-controller="Meal" class="btn btn-success"><i class="fa fa-address-book"></i></a></th>
+                            <th><a asp-action="UnConfirments" asp-controller="Meal" class="btn btn-success"><i class="fas fa-file-archive"></i></a></th>
 
                         </tr>
                     </thead>
