--- a/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/_ViewImports.cshtml
+++ b/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using QuickFoodDelivery.Mvc
+@using QuickFoodDelivery.Domain.Entities;
 @using QuickFoodDelivery.Application.ViewModels;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
