Employment and Services crud was completed

--- a/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Areas/Manage/Views/Shared/_Layout.cshtml
+++ b/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Areas/Manage/Views/Shared/_Layout.cshtml
@@ -77,6 +77,8 @@
                                 <li><a asp-action="Index" asp-controller="Restaurant">> <span>Restaurants</span></a></li>
                                 <li><a asp-action="Index" asp-controller="FoodCategory">> <span>Food categories</span></a></li>
                                 <li><a asp-action="Index" asp-controller="Meal">> <span>Meals</span></a></li>
+                                <li><a asp-action="Index" asp-controller="Employment">> <span>Employments</span></a></li>
+                                <li><a asp-action="Index" asp-controller="Service">> <span>Services</span></a></li>
                             </ul>
                         </li>
                         <li><a href="tables.html"><i class="fa fa-table purple_color2"></i> <span>Tables</span></a></li>
