--- a/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/Courier/Index.cshtml
+++ b/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/Courier/Index.cshtml
@@ -68,6 +68,7 @@
                 </li>
             </ul>
         </nav>
+        <br />
         <table class="table table-striped cart-list">
             <thead>
                 <tr>
@@ -75,17 +76,42 @@
                         Count
                     </th>
                     <th>
-                        Order
+                        User Address
                     </th>
                     <th>
-                        status
+                        User PhoneNumber
                     </th>
                     <th>
-                        Price
+                        Note For Restaurant
                     </th>
                 </tr>
             </thead>
             <tbody>
+                @foreach (var item in Model.Orders)
+                {
+                    <tr>
+                        <td>
+                            <h5>@(count++).User FullName:@item.UserName @item.UserSurname</h5>
+                            
+                        </td>
+                        <td>
+                            <p>
+                                @item.UserAddress
+                            </p>
+                        </td>
+                        <td>
+                            <p>@item.UserPhoneNumber</p>
+                        </td>
+                        <td>
+                            <p>@item.NotesForRestaurant</p>
+                        </td>
+                        <td class="options">
+                            <div class="dropdown dropdown-options">
+                                <a asp-action="UpdateOrder" asp-controller="Courier" asp-route-id="@item.Id" class="dropdown-toggle"><i class="fas fa-sync rotate" id="rotate-icon" onclick="startRotation()"></i></a>
+                            </div>
+                        </td>
+                    </tr>
+                }
             </tbody>
         </table>
 
