MyProfile was completed

--- a/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/Courier/Index.cshtml
+++ b/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/Courier/Index.cshtml
@@ -107,7 +107,7 @@
                         </td>
                         <td class="options">
                             <div class="dropdown dropdown-options">
-                                <a asp-action="UpdateOrder" asp-controller="Courier" asp-route-id="@item.Id" class="dropdown-toggle"><i class="fas fa-sync rotate" id="rotate-icon" onclick="startRotation()"></i></a>
+                                <a asp-action="ChangeOrderStatus" asp-controller="Courier" asp-route-id="@item.Id" class="dropdown-toggle"><i class="fas fa-sync rotate" id="rotate-icon" onclick="startRotation()"></i></a>
                             </div>
                         </td>
                     </tr>
