--- a/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/Profile/Index.cshtml
+++ b/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/Profile/Index.cshtml
@@ -59,11 +59,8 @@
 </head>
 <body>
     <header class="cd__intro">
-        <h1> Dashboard Profile Page Theme Color CSS Vanilla JS Example </h1>
-        <p> Dashboard Profile Page Theme Color CSS Vanilla JS </p>
-        <div class="cd__action">
-            <a href="https://www.codehim.com/html5-css3/user-profile-page-template-in-html-css" title="Back to download and tutorial page" class="cd__btn back">Back to Tutorial</a>
-        </div>
+        
+        
     </header>
     <!--$%adsense%$-->
     <main class="cd__main">
@@ -86,7 +83,7 @@
                         </svg>
                         <span>Home</span> <!-- Ayrıca metni de değiştirdik -->
                     </a>
-                    <a href="#" style="display: inline-flex; align-items: center;">
+                    <a asp-action="Edit" asp-controller="Profile" style="display: inline-flex; align-items: center;">
                         <i class="feather feather-edit" style="vertical-align: -1px;"></i>
                         <span><b>Edit</b></span>
                     </a>
@@ -104,11 +101,30 @@
                     <li><span>21</span>Comments</li>*@
                 </ul>
                 <div class="content__button">
-                    <a class="button" href="#">
-                        <div class="button__border"></div>
-                        <div class="button__bg"></div>
-                        <p class="button__text">Your Orders</p>
-                    </a>
+                    @if (User.IsInRole(UserRole.RestaurantAdmin.ToString()))
+                    {
+                        <a class="button" asp-action="Index" asp-controller="RestaurantAdmin">
+                            <div class="button__border"></div>
+                            <div class="button__bg"></div>
+                            <p class="button__text">Your Restaurant</p>
+                        </a>
+                    }
+                    else if (User.IsInRole(UserRole.Member.ToString()))
+                    {
+                        <a class="button" asp-action="MyOrders" asp-controller="Profile">
+                            <div class="button__border"></div>
+                            <div class="button__bg"></div>
+                            <p class="button__text">Your Orders</p>
+                        </a>
+                    }
+                    else if (User.IsInRole(UserRole.Courier.ToString()))
+                    {
+                        <a class="button" asp-action="Index" asp-controller="Courier">
+                            <div class="button__border"></div>
+                            <div class="button__bg"></div>
+                            <p class="button__text">Delivery Orders</p>
+                        </a>
+                    }
                 </div>
             </div>
             <div class="bg">
@@ -133,7 +149,7 @@
         </div>
         <!-- END EDMO HTML (Happy Coding!)-->
     </main>
-    <footer class="cd__credit">Author: adrien - Distributed By: <a title="Free web design code & scripts" href="https://www.codehim.com?source=demo-page" target="_blank">CodeHim</a></footer>
+    <footer class="cd__credit"><a title="Free web design code & scripts" href="https://www.codehim.com?source=demo-page" target="_blank"></a></footer>
 
     <!-- Script JS -->
     <script src="~/myprofile/js/script.js"></script>
