--- a/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/RestaurantAdmin/CreateYourRestaurant.cshtml
+++ b/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/RestaurantAdmin/CreateYourRestaurant.cshtml
@@ -155,7 +155,7 @@
                     <div class="col-md-6 col-sm-6">
                         <div class="form-group">
                             <label asp-for="Photo">Photo</label>
-                            <input asp-for="Photo" class="form-control" placeholder="Photo">
+                            <input asp-for="Photo" accept="image/*" class="form-control" placeholder="Photo">
                             <span asp-validation-for="Photo"></span>
                         </div>
                     </div>
