--- a/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/Courier/Index.cshtml
+++ b/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/Courier/Index.cshtml
@@ -120,7 +120,7 @@
                         </td>
                         <td class="options">
                             <div class="dropdown dropdown-options">
-                                <a asp-action="Detail" asp-controller="Courier" asp-route-id="@item.Id" class="dropdown-toggle"><i class="fas fa-compass rotate" id="rotate-icon" onclick="startRotation()"></i></a>
+                                <a asp-action="OrderDetail" asp-controller="Courier" asp-route-id="@item.Id" class="dropdown-toggle"><i class="fas fa-compass rotate" id="rotate-icon" onclick="startRotation()"></i></a>
                             </div>
                         </td>
                     </tr>
