--- a/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/Shared/_Layout.cshtml
+++ b/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/Shared/_Layout.cshtml
@@ -1,9 +1,13 @@
-﻿@inject UserManager<AppUser> userManager
-
+﻿@using QuickFoodDelivery.Persistence.Implementations.Services;
+@inject UserManager<AppUser> userManager
+@inject LayoutService servise
+@{
+    Dictionary<string, string> settings = await servise.GetSettingAsync();
+}
 <!DOCTYPE html>
 <html>
 <head>
-    
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -38,7 +42,7 @@
 
     <!-- Modernizr -->
     <script src="~/assets/js/modernizr.js"></script>
-    
+
 </head>
 
 <body>
@@ -57,7 +61,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-4 col-sm-4 col-4">
-                    <a href="index.html" id="logo">
+                    <a asp-action="Index" asp-controller="home" id="logo">
                         <img src="~/assets/img/logo.png" width="190" height="23" alt="" class="d-none d-sm-block">
                         <img src="~/assets/img/logo_mobile.png" width="59" height="23" alt="" class="d-block d-sm-none">
                     </a>
@@ -71,56 +75,20 @@
                         <a href="#" class="open_close" id="close_in"><i class="icon_close"></i></a>
                         <ul>
                             <li class="submenu">
-                                <a href="javascript:void(0);" class="show-submenu">Home<i class="icon-down-open-mini"></i></a>
-                                <ul>
-                                    <li><a href="index.html">Home Video background</a></li>
-                                    <li><a href="index_2.html">Home Static image</a></li>
-                                    <li><a href="index_3.html">Home Text rotator</a></li>
-                                    <li><a href="index_8.html">Home Layer slider</a></li>
-                                    <li><a href="index_4.html">Home Cookie bar</a></li>
-                                    <li><a href="index_5.html">Home Popup</a></li>
-                                    <li><a href="index_7.html">Top Menu version 2</a></li>
-                                </ul>
+                                <a asp-action="Index" asp-controller="Home" class="show-submenu">Home</a>
                             </li>
                             <li class="submenu">
-                                <a href="javascript:void(0);" class="show-submenu">Restaurants<i class="icon-down-open-mini"></i></a>
-                                <ul>
-                                    <li><a href="list_page.html">Row listing</a></li>
-                                    <li><a href="grid_list.html">Grid listing</a></li>
-                                    <li><a href="map_listing.html">Map listing</a></li>
-                                    <li><a href="detail_page.html">Restaurant Menu</a></li>
-                                    <li><a href="submit_restaurant.html">Submit Restaurant</a></li>
-                                    <li><a href="cart.html">Order step 1</a></li>
-                                    <li><a href="cart_2.html">Order step 2</a></li>
-                                    <li><a href="cart_3.html">Order step 3</a></li>
-                                    <li><a href="cart_datepicker.html">Order Date/Time picker</a></li>
-                                </ul>
+                                <a asp-action="Index" asp-controller="Restaurant" class="show-submenu">Restaurants</a>
                             </li>
-                            <li><a href="about.html">About us</a></li>
+                            <li><a asp-action="About" asp-controller="Home">About us</a></li>
                             <li><a href="faq.html">Faq</a></li>
-                            <li class="submenu">
-                                <a href="javascript:void(0);" class="show-submenu">Pages<i class="icon-down-open-mini"></i></a>
-                                <ul>
-                                    <li><a href="RTL_version/index.html">RTL version</a></li>
-                                    <li><a href="admin.html">Admin section</a></li>
-                                    <li><a href="submit_driver.html">Submit Driver</a></li>
-                                    <li><a href="#0" data-toggle="modal" data-target="#login_2">User Login</a></li>
-                                    <li><a href="#0" data-toggle="modal" data-target="#register">User Register</a></li>
-                                    <li><a href="detail_page_2.html">Restaurant detail page</a></li>
-                                    <li><a href="blog.html">Blog</a></li>
-                                    <li><a href="contacts.html">Contacts</a></li>
-                                    <li><a href="coming_soon/index.html">Coming soon page</a></li>
-                                    <li><a href="icon_pack_1.html">Icon pack 1</a></li>
-                                    <li><a href="icon_pack_2.html">Icon pack 2</a></li>
-                                </ul>
-                            </li>
                             @if (User.IsInRole("Admin"))
                             {
-                                <li><a asp-action="Index" asp-controller="DashBoard" asp-area="Manage" >Go Admin page</a></li>
+                                <li><a asp-action="Index" asp-controller="DashBoard" asp-area="Manage">Go Admin page</a></li>
                             }
-                            else if(User.IsInRole("RestaurantAdmin"))
+                            else if (User.IsInRole("RestaurantAdmin"))
                             {
-                                <li><a asp-action="Index" asp-controller="RestaurantAdmin" >Go R.Admin </a></li>
+                                <li><a asp-action="Index" asp-controller="RestaurantAdmin">Go R.Admin </a></li>
                             }
                             else if (User.IsInRole("Courier"))
                             {
@@ -145,11 +113,10 @@
                             }
                             else
                             {
-                            <li><a asp-action="Register" asp-controller="Account" >Register</a></li>
-                            <li><a asp-action="Login" asp-controller="Account" >Login</a></li>
-                                
+                                <li><a asp-action="Register" asp-controller="Account">Register</a></li>
+                                <li><a asp-action="Login" asp-controller="Account">Login</a></li>
+
                             }
-                            <li><a href="">Purchase this template</a></li>
                         </ul>
                     </div><!-- End main-menu -->
                 </nav>
@@ -171,46 +138,14 @@
                 <div class="col-md-3">
                     <h3>About</h3>
                     <ul>
-                        <li><a href="about.html">About us</a></li>
-                        <li><a href="faq.html">Faq</a></li>
-                        <li><a href="contacts.html">Contacts</a></li>
-                        <li><a href="#0" data-toggle="modal" data-target="#login_2">Login</a></li>
-                        <li><a href="#0" data-toggle="modal" data-target="#register">Register</a></li>
-                        <li><a href="#0">Terms and conditions</a></li>
+                        <li><a asp-action="About" asp-controller="Home">About us</a></li>
+                        @if (!User.Identity.IsAuthenticated)
+                        {
+
+                            <li><a asp-action="Login" asp-controller="Account">Login</a></li>
+                            <li><a asp-action="Register" asp-controller="Account">Register</a></li>
+                        }
                     </ul>
-                </div>
-                <div class="col-md-3" id="newsletter">
-                    <h3>Newsletter</h3>
-                    <p>
-                        Join our newsletter to keep be informed about offers and news.
-                    </p>
-                    <div id="message-newsletter_2">
-                    </div>
-                    <form method="post" action="assets/newsletter.php" name="newsletter_2" id="newsletter_2">
-                        <div class="form-group">
-                            <input name="email_newsletter_2" id="email_newsletter_2" type="email" value="" placeholder="Your mail" class="form-control">
-                        </div>
-                        <input type="submit" value="Subscribe" class="btn_1" id="submit-newsletter_2">
-                    </form>
-                </div>
-                <div class="col-md-2">
-                    <h3>Settings</h3>
-                    <div class="styled-select">
-                        <select name="lang" id="lang">
-                            <option value="English" selected>English</option>
-                            <option value="French">French</option>
-                            <option value="Spanish">Spanish</option>
-                            <option value="Russian">Russian</option>
-                        </select>
-                    </div>
-                    <div class="styled-select">
-                        <select name="currency" id="currency">
-                            <option value="USD" selected>USD</option>
-                            <option value="EUR">EUR</option>
-                            <option value="GBP">GBP</option>
-                            <option value="RUB">RUB</option>
-                        </select>
-                    </div>
                 </div>
             </div><!-- End row -->
             <div class="row">
@@ -237,44 +172,43 @@
 
     <div class="layer"></div><!-- Mobile menu overlay mask -->
     <!-- Login modal -->
-@*    <div class="modal fade" id="login_2" tabindex="-1" role="dialog" aria-labelledby="myLogin" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content modal-popup">
-                <a href="#" class="close-link"><i class="icon_close_alt2"></i></a>
-                <form action="#" class="popup-form" id="myLogin">
-                    <div class="login_icon"><i class="icon_lock_alt"></i></div>
-                    <input type="text" class="form-control form-white" placeholder="Username">
-                    <input type="text" class="form-control form-white" placeholder="Password">
-                    <div class="text-left">
-                        <a href="#">Forgot Password?</a>
-                    </div>
-                    <button type="submit" class="btn btn-submit">Submit</button>
-                </form>
-            </div>
-        </div>
+    @*    <div class="modal fade" id="login_2" tabindex="-1" role="dialog" aria-labelledby="myLogin" aria-hidden="true">
+    <div class="modal-dialog">
+    <div class="modal-content modal-popup">
+    <a href="#" class="close-link"><i class="icon_close_alt2"></i></a>
+    <form action="#" class="popup-form" id="myLogin">
+    <div class="login_icon"><i class="icon_lock_alt"></i></div>
+    <input type="text" class="form-control form-white" placeholder="Username">
+    <input type="text" class="form-control form-white" placeholder="Password">
+    <div class="text-left">
+    <a href="#">Forgot Password?</a>
+    </div>
+    <button type="submit" class="btn btn-submit">Submit</button>
+    </form>
+    </div>
+    </div>
     </div><!-- End modal -->*@
     <!-- Register modal -->
-    
-@*            <div class="modal-content modal-popup">
-                <a href="#" class="close-link"><i class="icon_close_alt2"></i></a>
-                <form action="#" class="popup-form" id="myRegister">
-                    <div class="login_icon"><i class="icon_lock_alt"></i></div>
-                    <input type="text" class="form-control form-white" placeholder="Name">
-                    <input type="text" class="form-control form-white" placeholder="Last Name">
-                    <input type="email" class="form-control form-white" placeholder="Email">
-                    <input type="text" class="form-control form-white" placeholder="Password" id="password1">
-                    <input type="text" class="form-control form-white" placeholder="Confirm password" id="password2">
-                    <div id="pass-info" class="clearfix"></div>
-                    <div class="checkbox-holder text-left">
-                        <div class="checkbox">
-                            <input type="checkbox" value="accept_2" id="check_2" name="check_2" />
-                            <label for="check_2"><span>I Agree to the <strong>Terms &amp; Conditions</strong></span></label>
-                        </div>
-                    </div>
-                    <button type="submit" class="btn btn-submit">Register</button>
-                </form>
-            </div>*@
-<!-- End Register modal -->
+    @*            <div class="modal-content modal-popup">
+    <a href="#" class="close-link"><i class="icon_close_alt2"></i></a>
+    <form action="#" class="popup-form" id="myRegister">
+    <div class="login_icon"><i class="icon_lock_alt"></i></div>
+    <input type="text" class="form-control form-white" placeholder="Name">
+    <input type="text" class="form-control form-white" placeholder="Last Name">
+    <input type="email" class="form-control form-white" placeholder="Email">
+    <input type="text" class="form-control form-white" placeholder="Password" id="password1">
+    <input type="text" class="form-control form-white" placeholder="Confirm password" id="password2">
+    <div id="pass-info" class="clearfix"></div>
+    <div class="checkbox-holder text-left">
+    <div class="checkbox">
+    <input type="checkbox" value="accept_2" id="check_2" name="check_2" />
+    <label for="check_2"><span>I Agree to the <strong>Terms &amp; Conditions</strong></span></label>
+    </div>
+    </div>
+    <button type="submit" class="btn btn-submit">Register</button>
+    </form>
+    </div>*@
+    <!-- End Register modal -->
     <!-- COMMON SCRIPTS -->
     <script src="~/assets/js/jquery-3.7.0.min.js"></script>
     <script src="~/assets/js/common_scripts_min.js"></script>
